terraform/security_group.tf
resource "aws_security_group" "cloud_devops_sg" {
  name        = "launch-wizard-1"
  description = "launch-wizard-1 created 2026-09-17T13:48:10.328Z"
  vpc_id      = "vpc-0cb0b1f6e101406c4"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
